--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^6.0.2",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.2.1",
     "react-navigation": "^3.9.1"
   },
